# gtk32fa

./: README.md  com.niallasher.twofactor.json  com.niallasher.twofactor.json~  config.yaml  gtk32fa.py  meson.build  python3-SecretStorage.json  python3-pycairo.json  python3-pyotp.json  python3-pyyaml.json  storage.yaml  window.glade
data/: com.niallasher.twofactor.appdata.xml.in  com.niallasher.twofactor.desktop.in  com.niallasher.twofactor.gschema.xml  meson.build
po/: POTFILES  meson.build
run/: build.ninja  compile_commands.json
run/meson-info/: intro-buildsystem_files.json  intro-dependencies.json  intro-installed.json  intro-projectinfo.json  intro-targets.json  intro-tests.json  meson-info.json
run/meson-logs/: meson-log.txt
run/src/: twofactor
src/: listbox.py  listbox_old.py  logger.py  main.py  meson.build  screenshot.py  stylesheet.css  twofactor.gresource.xml  twofactor.in  twofactorcode.py  window.ui  window.ui~
